# discord_photo_gallery

./: .gitignore  Cargo.toml  index.html
src/: main.rs  thumbnail_download.rs
src/website/: builder.rs  mod.rs
src/website_builder/: builder.rs  mod.rs
src_ser/: main.rs
website_files/: gallery_template.html
website_files/resources/: gallery-style.css  gallery.js
website_v3/: gallery.html  gallery.js  gallery.ts  index.html  test_galllery_data.json
