[package]
name = "discord_photo_gallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "5.0.0-beta.5"
serde = { version = "1.0.188" }
serde_derive = "1.0.188"
once_cell = "1.18.0"
chrono = "0.4.31"

tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "io-std"] }
reqwest = { version = "0.11.22" }
futures = "0.3.28"
image = { version = "0.24.7", features = [] }
tracing = "0.1.37"
twilight-model = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-cache-inmemory = "0.15.4"
#serenity = { version = "0.11.6", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
